@@ -2,6 +2,16 @@
 wxWindows 2.0 for Windows Change Log
 ------------------------------------
 
+Alpha 18, December 23nd 1998
+----------------------------
+
+- Win16 support working again (VC++ 1.5)
+- Win16 now uses generic wxNotebook, wxListCtrl,
+  wxTreeCtrl -- more or less working now, although
+  a little work on wxNotebook is still needed.
+  Under 16-bit Windows, get assertion when you click
+  on a tab.
+
 Alpha 17, November 22nd 1998
 ----------------------------
 
